[package]
name = "AoC-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.11", features = ["macros"] }
regex = "1.10.2"
itertools = "0.12.0"
sscanf = "0.4.1"
num = { version = "0.4.1", features = [] }
